--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Drinks</title>
+    <title>Menu</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="stylesheet" href="../styles/style.css">
@@ -13,7 +13,9 @@
 <body>
     <div class="container-fluid">
         <div class="row">
-                <div class="headBox"> <p>Top Sellers</p>  </div>
+            <div class="headBox">
+                <p>Top Sellers</p>
+            </div>
         </div>
 
         <div class="row bgWhite">
@@ -21,94 +23,135 @@
                 <div class="card " style="width: 12rem; border: 0px;">
                     <img src="../assssssssssssssssssssssssets/Taro.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
                     </div>
-                  </div>
+                </div>
             </div>
 
             <div class="col topFive">
                 <div class="card" style="width: 12rem; border: 0px;">
                     <img src="../assssssssssssssssssssssssets/GreenTea.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
                     </div>
-                  </div>
+                </div>
             </div>
 
             <div class="col topFive">
                 <div class="card" style="width: 12rem; border: 0px;">
                     <img src="../assssssssssssssssssssssssets/ThaiTea.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
                     </div>
-                  </div>
+                </div>
             </div>
 
             <div class="col topFive">
                 <div class="card" style="width: 12rem; border: 0px;">
                     <img src="../assssssssssssssssssssssssets/Avocado.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
                     </div>
-                  </div>
+                </div>
             </div>
 
             <div class="col topFive">
                 <div class="card" style="width: 12rem; border: 0px;">
                     <img src="../assssssssssssssssssssssssets/HoneyDew.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                      <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
                     </div>
-                  </div>
+                </div>
             </div>
-            
+
         </div>
 
         <div class="row">
-                <div class="headBox"><p>Drinks</p></div>
-        </div>
-
-<br>
-<br>
-        <div class="row">
-            <div class="line" ></div>
-            <div class="menuText">Toppings</div>
-            <div class="line" ></div>
+            <div class="headBox">
+                <p>Drinks</p>
+            </div>
         </div>
 
         <br>
-<br>
+        <br>
         <div class="row">
-            <div class="line" ></div>
-            <div class="menuText">Iced Pearl Drinks</div>
-            <div class="line" ></div>
+            <div class="col-4">
+            <div class="line"></div>
+            <div class="menuText">Sandwiches</div>
+            <div class="line"></div>
+        </div>
+
+            <div class="foodText">
+                <p>#1 Special Combination</p>
+                <div>Steamed Pork Roll, Salted Ham</div>
+                <p>#2 Pork Combination</p>
+                <div>Salted Ham, Headcheese, Butter</div>
+                <p>#3 Grilled Pork</p>
+                <div>Garlic Grilled Pork, Butter Pate</div>
+                <p>#4 B.B.Q Pork</p>
+                <div>B.B.Q Pork, Pate, Butter</div>
+                <p>#5 Grilled Chicken</p>
+                <div>Garlic Grilled Chicken & Butter</div>
+                <p>#6 Pork Roll</p>
+                <div>Steamed Pork Patty, Butter, Pate</div>
+            </div>
         </div>
 
         <br>
-<br>
+        <br>
         <div class="row">
-            <div class="line" ></div>
-            <div class="menuText">Specialty Drinks</div>
-            <div class="line" ></div>
+            <div class="col-4">
+            <div class="line"></div>
+            <div class="menuText">Baguettes</div>
+            <div class="line"></div>
         </div>
 
-        <br>
-<br>
-        <div class="row">
-            <div class="line" ></div>
-            <div class="menuText">Smoothies</div>
-            <div class="line" ></div>
+            <div class="foodText">
+                <p>#7 Vegetarian</p>
+                <div>Tofu Skin, Yam, Noodles</div>
+                <p>#8 Roast Beef & Cheese Baguette</p>
+                <div>Roast Beef </div>
+                <p>#9 Turkey, Ham, & Cheese Baguette</p>
+                <div>Sliced Turkey, Sliced Ham, American Cheese</div>
+                <p>#10 Ham Cheese Baguette</p>
+                <div>Sliced Ham & American Cheese</caption>
+                <p>#11 Turkey & Ham Baguette</p>
+                <div>Sliced Turkey, Sliced Ham, American Cheese</div>
+                <p>#12</p>
+                <div>Sliced Salami & American Cheese</div>
+            </div>
         </div>
-
         <br>
-<br>
+        <br>
         <div class="row">
-            <div class="line" ></div>
-            <div class="menuText">Ice Slushes</div>
-            <div class="line" ></div>
+            <div class="col-4">
+            <div class="line"></div>
+            <div class="menuText">Croissants</div>
+            <div class="line"></div>
         </div>
-
+            <div class="foodText">
+                <p>#13 Turkey, Ham & Cheese Croissant</p>
+                <div>Sliced Turkey, Sliced Ham & American Cheese</div>
+                <p>#14 Ham & Cheese Croissant</p>
+                <div>Sliced Ham & American Cheese</div>
+                <p>#15 Turkey & Cheese Croissant</p>
+                <div>Sliced Turkey & American Cheese</div>
+                <p>#16 Salami & Cheese Croissant</p>
+                <div>Sliced Salami & American Cheese</div>
+                <p>#17 Roast Beef & Cheese Croissant</p>
+                <div>Sliced Roast Beef & American Cheese</div>
+                <p>#18 Salami, Ham & Cheese Croissant</p>
+                <div>Sliced Salami, Sliced Ham & American Cheese</div>
+            </div>
+        </div>
         <br>
+        <br>
+
 
         <div id="carouselExample" class="carousel slide bgWhiteJ">
             <div class="carousel-inner">
@@ -224,13 +267,11 @@
                     </div>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample"
-                data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample"
-                data-bs-slide="next">
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
                 <span class="carousel-control-next-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Next</span>
             </button>
@@ -238,50 +279,50 @@
 
         <hr class="yellowJ hrLineJ mt-5">
 
-    <div class="container-fluid footerPaddingJ">
-        <div class="row">
-            <div class="col-3">
-                <div class="row yellowJ">
-                    <h2>Best Sandwiches</h2>
-                </div>
-                <div class="row yellowJ">
-                    <h2>& Smoothies</h2>
-                </div>
-            </div>
-            <div class="col-9">
-                <div class="row">
-                    <div class="col">
-                        <div class="row">
-                            <p class="yellowJ">Hours</p>
-                            <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
-                            <p class="yellowJ">CLOSED WEDNESDAY</p>
-                            <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
-                        </div>
+        <div class="container-fluid footerPaddingJ">
+            <div class="row">
+                <div class="col-3">
+                    <div class="row yellowJ">
+                        <h2>Best Sandwiches</h2>
                     </div>
-
-                    <div class="col">
-                        <div class="row">
-                            <p class="yellowJ">Contact Us</p>
-                            <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
-                            <p class="yellowJ">CLOSED WEDNESDAY</p>
-                            <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
-                        </div>
+                    <div class="row yellowJ">
+                        <h2>& Smoothies</h2>
                     </div>
-
-                    <div class="col">
-                        <div class="row">
-                            <p class="yellowJ">Links</p>
+                </div>
+                <div class="col-9">
+                    <div class="row">
+                        <div class="col">
+                            <div class="row">
+                                <p class="yellowJ">Hours</p>
+                                <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
+                                <p class="yellowJ">CLOSED WEDNESDAY</p>
+                                <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
+                            </div>
                         </div>
-                        <div class="row">
-                            <img src="" alt="">
-                            <img src="" alt="">
-                            <img src="" alt="">
+
+                        <div class="col">
+                            <div class="row">
+                                <p class="yellowJ">Contact Us</p>
+                                <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
+                                <p class="yellowJ">CLOSED WEDNESDAY</p>
+                                <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
+                            </div>
+                        </div>
+
+                        <div class="col">
+                            <div class="row">
+                                <p class="yellowJ">Links</p>
+                            </div>
+                            <div class="row">
+                                <img src="" alt="">
+                                <img src="" alt="">
+                                <img src="" alt="">
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
 
 
 
