--- a/pages/Drinks.html
+++ b/pages/Drinks.html
@@ -11,7 +11,55 @@
 </head>
 
 <body>
+
+
+
   <div class="container-fluid">
+
+    <!-- NavBar -->
+    <div class="row">
+      <nav class="navbar navbar-expand-lg">
+        <div class="container-fluid">
+          <a class="navbar-brand yellowJ" href="#"></a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
+            <div class="" style="width: 100%;">
+              <div class="row">
+
+                <div class="col centerJ">
+                  <div class="row evenJ" style="width: 700px; padding-top: 40px;">
+                    <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 75px;"
+                      href="./pages/Menu.html">Menu</a>
+                    <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 140px;"
+                      href="./pages/ContactUs.html">Contact Us</a>
+                    <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 125px;" aria-current="page"
+                      href="./pages/AboutUs.html">About
+                      Us</a>
+                    <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 120px;"
+                      href="./pages/BanhMi.html">Banh Mi?</a>
+                  </div>
+                </div>
+
+                <div class="col-1 centerJ">
+                  <a href="./index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png" alt=""></a>
+                </div>
+                <div class="col yugiJ alignCenterJ">
+                  <h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">Best Sandwiches &
+                    Smothies</h1>
+                </div>
+
+              </div>
+
+            </div>
+          </div>
+        </div>
+      </nav>
+    </div>
+
+
     <div class="row">
       <div class="headBox">
         <p>Top Sellers</p>
@@ -77,25 +125,32 @@
       </div>
     </div>
 
+    <!-- Drinks Menu -->
+
     <br>
     <br>
     <div class="row">
-      <div class="col-4">
+      <div class="col">
         <div class="line"></div>
         <div class="menuText">Toppings</div>
         <div class="line"></div>
+        <div class="drinkText">
+          <p>Tapioca Pearls</p>
+          <p>Assorted Jelly</p>
+          <p>Lychee Jelly</p>
+          <p>Grass Jelly</p>
+          <p>Coconut Jelly</p>
+          <p>Green Apple Jelly</p>
+          <p>Passion Fruit Jelly</p>
+        </div>
       </div>
-      <div class="col priceText">
-        $0.25
+      <div class="col">
+        <div class="priceText">
+          $0.25
+        </div>
       </div>
-      <div class="drinkText">
-        <p>Tapioca Pearls</p>
-        <p>Assorted Jelly</p>
-        <p>Lychee Jelly</p>
-        <p>Grass Jelly</p>
-        <p>Coconut Jelly</p>
-        <p>Green Apple Jelly</p>
-        <p>Passion Fruit Jelly</p>
+      <div class="col">
+        <img src="../assssssssssssssssssssssssets/sandwich1.png" style="float: right;width:654px;height:482px;" alt="">
       </div>
     </div>
 
@@ -107,15 +162,20 @@
         <div class="line"></div>
         <div class="menuText">Iced Pearl Drinks</div>
         <div class="line"></div>
+        <div class="drinkText">
+          <p>Iced Milk Tea</p>
+          <p>Iced Thai Tea</p>
+          <p>Iced Green Tea</p>
+          <p>Iced Green Milk Tea</p>
+        </div>
       </div>
-      <div class="col priceText">
-        $5.69
+      <div class="col">
+        <div class="priceText">
+          $5.69
+        </div>
       </div>
-      <div class="drinkText">
-        <p>Iced Milk Tea</p>
-        <p>Iced Thai Tea</p>
-        <p>Iced Green Tea</p>
-        <p>Iced Green Milk Tea</p>
+      <div class="col">
+        <img src="../assssssssssssssssssssssssets/sandwich1.png" style="float: right;width:656px;height:378px;" alt="">
       </div>
     </div>
 
@@ -127,16 +187,21 @@
         <div class="line"></div>
         <div class="menuText">Specialty Drinks</div>
         <div class="line"></div>
+        <div class="drinkText">
+          <p>Iced Taro Milk Tea</p>
+          <p>Iced Coconut Grass</p>
+          <p>Iced Vietnamese Coffee</p>
+          <p>Iced Honeydew Milk Tea</p>
+          <p>Iced Lychee Green Milk Tea</p>
+        </div>
       </div>
-      <div class="col priceText">
-        $5.69
+      <div class="col">
+        <div class="priceText">
+          $5.69
+        </div>
       </div>
-      <div class="drinkText">
-        <p>Iced Taro Milk Tea</p>
-        <p>Iced Coconut Grass</p>
-        <p>Iced Vietnamese Coffee</p>
-        <p>Iced Honeydew Milk Tea</p>
-        <p>Iced Lychee Green Milk Tea</p>
+      <div class="col">
+        <img src="../assssssssssssssssssssssssets/sandwich1.png" style="float: right;width:656px;height:378px;" alt="">
       </div>
     </div>
 
@@ -148,19 +213,24 @@
         <div class="line"></div>
         <div class="menuText">Smoothies</div>
         <div class="line"></div>
+        <div class="drinkText">
+          <p>All Star Almond</p>
+          <p>Appealing Avocado</p>
+          <p>Mango Tango</p>
+          <p>Mocha Madness</p>
+          <p>Silky Strawberry</p>
+          <p>Tangy Taro</p>
+          <p>Heavenly Honeydew</p>
+          <p>Dreamy Strawberry Banana</p>
+        </div>
       </div>
-      <div class="col priceText">
-        $5.89
+      <div class="col">
+        <div class="priceText">
+          $5.89
+        </div>
       </div>
-      <div class="drinkText">
-        <p>All Star Almond</p>
-        <p>Appealing Avocado</p>
-        <p>Mango Tango</p>
-        <p>Mocha Madness</p>
-        <p>Silky Strawberry</p>
-        <p>Tangy Taro</p>
-        <p>Heavenly Honeydew</p>
-        <p>Dreamy Strawberry Banana</p>
+      <div class="col">
+        <img src="../assssssssssssssssssssssssets/sandwich1.png" style="float: right;width:656px;height:378px;" alt="">
       </div>
     </div>
 
@@ -172,29 +242,37 @@
         <div class="line"></div>
         <div class="menuText">Iced Slushes</div>
         <div class="line"></div>
+        <div class="drinkText">
+          <p>Kiwi King</p>
+          <p>Lychee Lover</p>
+          <p>Mango Mania</p>
+          <p>Green Apple Gushers</p>
+          <p>Stawberry Sensation</p>
+          <p>Thai Tea Temptations</p>
+          <p>Green Tea Gangbusters</p>
+        </div>
       </div>
-      <div class="col priceText">
-        $5.89
+      <div class="col">
+        <div class="priceText">
+          $5.89
+        </div>
       </div>
-      <div class="drinkText">
-        <p>Kiwi King</p>
-        <p>Lychee Lover</p>
-        <p>Mango Mania</p>
-        <p>Green Apple Gushers</p>
-        <p>Stawberry Sensation</p>
-        <p>Thai Tea Temptations</p>
-        <p>Green Tea Gangbusters</p>
+      <div class="col">
+        <img src="../assssssssssssssssssssssssets/sandwich1.png" style="float: right;width:656px;height:378px;" alt="">
       </div>
     </div>
 
     <br>
     <br>
 
+
+    <!-- Yelp Review -->
+
     <div id="carouselExample" class="carousel slide bgWhiteJ">
       <div class="carousel-inner">
         <div class="carousel-item active">
           <div class="row centerJ">
-            <img class="reviewImgJ" src="../assets/Ellipse 1.png" alt="">
+            <img class="reviewImgJ" src="../assssssssssssssssssssssssets/review1.jpg" alt="">
           </div>
           <div class="row centerJ">
             <img class="starJ" src="../assets/Star.png" alt="">
@@ -215,7 +293,7 @@
             <img class="quotesJ" src="../assets/Quotes.png" alt="">
           </div>
           <div class="row">
-            <p class="txtCenterJ">Tina T</p>
+            <p class="txtCenterJ">Nely L.</p>
           </div>
           <div class="row">
             <p class="txtCenterJ">Customer</p>
@@ -250,7 +328,7 @@
             <img class="quotesJ" src="../assets/Quotes.png" alt="">
           </div>
           <div class="row">
-            <p class="txtCenterJ">Tina T</p>
+            <p class="txtCenterJ">Jeremy B.</p>
           </div>
           <div class="row">
             <p class="txtCenterJ">Customer</p>
@@ -263,7 +341,7 @@
         </div>
         <div class="carousel-item">
           <div class="row centerJ">
-            <img class="reviewImgJ" src="../assets/Ellipse 1.png" alt="">
+            <img class="reviewImgJ" src="../assssssssssssssssssssssssets/review1.jpg" alt="">
           </div>
           <div class="row centerJ">
             <img class="starJ" src="../assets/Star.png" alt="">
@@ -282,7 +360,7 @@
             <img class="quotesJ" src="./assets/Quotes.png" alt="">
           </div>
           <div class="row">
-            <p class="txtCenterJ">Tina T</p>
+            <p class="txtCenterJ">Arianna P.</p>
           </div>
           <div class="row">
             <p class="txtCenterJ">Customer</p>
@@ -304,46 +382,53 @@
       </button>
     </div>
 
-    <hr class="yellowJ hrLineJ mt-5">
+
+
+
+    <!-- Footer -->
+
+    <hr class="yellowJ hrLineJ mt-4">
 
     <div class="container-fluid footerPaddingJ">
-      <div class="row">
-        <div class="col-3">
-          <div class="row yellowJ">
-            <h2>Best Sandwiches</h2>
+      <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
+        <div class="col-4" style="padding-left: 3%;">
+          <div class="row yellowJ abrilFatfaceJ">
+            <h2 class="footerFontSize3">Best Sandwiches</h2>
           </div>
-          <div class="row yellowJ">
-            <h2>& Smoothies</h2>
+          <div class="row yellowJ abrilFatfaceJ">
+            <h2 class="footerFontSize3">& Smoothies</h2>
           </div>
         </div>
-        <div class="col-9">
+        <div class="col" style="padding-left: 2%;">
           <div class="row">
             <div class="col">
               <div class="row">
-                <p class="yellowJ">Hours</p>
-                <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
-                <p class="yellowJ">CLOSED WEDNESDAY</p>
-                <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
+                <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
+                <p class="yellowJ footerFontSize ">Mon & Tue : 9 am - 5 pm</p>
+                <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
+                <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
               </div>
             </div>
 
             <div class="col">
               <div class="row">
-                <p class="yellowJ">Contact Us</p>
-                <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
-                <p class="yellowJ">CLOSED WEDNESDAY</p>
-                <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
+                <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
+                <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
+                <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
+                <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
               </div>
             </div>
 
             <div class="col">
               <div class="row">
-                <p class="yellowJ">Links</p>
+                <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
               </div>
               <div class="row">
-                <img src="" alt="">
-                <img src="" alt="">
-                <img src="" alt="">
+                <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
+                    class="img-fluid" src="../assets/FACEBOOK.png" alt=""></a>
+                <a class="footerIconsJ" href="https://m.facebook.com/profile.php?id=111693338885516"><img
+                    class="img-fluid" src="../assets/icons8-yelp-100.png" alt=""></a>
+                <a class="footerIconsJ"><img class="img-fluid" src="../assets/bestSandwich logo.png" alt=""></a>
               </div>
             </div>
           </div>
@@ -385,34 +470,8 @@
 
 
 
-    
+
   </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
