--- a/pages/Menu.html
+++ b/pages/Menu.html
@@ -12,11 +12,60 @@
 
 <body>
     <div class="container-fluid">
+
+    <!-- NavBar -->
+
+        <div class="row">
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand yellowJ" href="#"></a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
+                        aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse centerJ" id="navbarNavAltMarkup">
+                        <div class="" style="width: 100%;">
+                            <div class="row">
+
+                                <div class="col centerJ">
+                                    <div class="row evenJ" style="width: 700px; padding-top: 40px;">
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 75px;"
+                                            href="./pages/Menu.html">Menu</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 140px;"
+                                            href="./pages/ContactUs.html">Contact Us</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 125px;"
+                                            aria-current="page" href="./pages/AboutUs.html">About
+                                            Us</a>
+                                        <a class="nav-link yellowJ navLinksJ txtCenterJ" style="width: 120px;"
+                                            href="./pages/BanhMi.html">Banh Mi?</a>
+                                    </div>
+                                </div>
+
+                                <div class="col-1 centerJ">
+                                    <a href="./index.html"><img class="logoSizeJ" src="../assets/bestSandwich logo.png"
+                                            alt=""></a>
+                                </div>
+                                <div class="col yugiJ alignCenterJ">
+                                    <h1 style="width: 100%" class="txtCenterJ titleFontJ yellowJ">Best Sandwiches &
+                                        Smothies</h1>
+                                </div>
+
+                            </div>
+
+                        </div>
+                    </div>
+                </div>
+            </nav>
+        </div>
+
         <div class="row">
             <div class="headBox">
                 <p>Top Sellers</p>
             </div>
         </div>
+
+<!-- Top Five Food -->
 
         <div class="row bgWhite">
             <div class="col topFive">
@@ -77,6 +126,8 @@
             </div>
         </div>
 
+<!-- Sandwich Menu -->
+
         <br>
         <br>
         <div class="row">
@@ -87,6 +138,9 @@
         </div>
 
             <div class="foodText">
+                <div class="col">
+                    <img src="" alt="">
+                </div>
                 <p>#1 Special Combination</p>
                 <div>Steamed Pork Roll, Salted Ham</div>
                 <p>#2 Pork Combination</p>
@@ -152,6 +206,7 @@
         <br>
         <br>
 
+<!-- Yelp Review -->
 
         <div id="carouselExample" class="carousel slide bgWhiteJ">
             <div class="carousel-inner">
@@ -277,46 +332,53 @@
             </button>
         </div>
 
-        <hr class="yellowJ hrLineJ mt-5">
+<!-- Footer -->
+
+        <hr class="yellowJ hrLineJ mt-4">
 
         <div class="container-fluid footerPaddingJ">
-            <div class="row">
-                <div class="col-3">
-                    <div class="row yellowJ">
-                        <h2>Best Sandwiches</h2>
+            <div class="row" style="padding-top: 45px; padding-bottom: 20px;">
+                <div class="col-4" style="padding-left: 3%;">
+                    <div class="row yellowJ abrilFatfaceJ">
+                        <h2 class="footerFontSize3">Best Sandwiches</h2>
                     </div>
-                    <div class="row yellowJ">
-                        <h2>& Smoothies</h2>
+                    <div class="row yellowJ abrilFatfaceJ">
+                        <h2 class="footerFontSize3">& Smoothies</h2>
                     </div>
                 </div>
-                <div class="col-9">
+                <div class="col" style="padding-left: 2%;">
                     <div class="row">
                         <div class="col">
                             <div class="row">
-                                <p class="yellowJ">Hours</p>
-                                <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
-                                <p class="yellowJ">CLOSED WEDNESDAY</p>
-                                <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
+                                <p class="yellowJ abrilFatfaceJ footerFontSize2">HOURS</p>
+                                <p class="yellowJ footerFontSize ">Mon & Tue : 9 am - 5 pm</p>
+                                <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
+                                <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
                             </div>
                         </div>
 
                         <div class="col">
                             <div class="row">
-                                <p class="yellowJ">Contact Us</p>
-                                <p class="yellowJ">Mon & Tue : 9 am - 5 pm</p>
-                                <p class="yellowJ">CLOSED WEDNESDAY</p>
-                                <p class="yellowJ">Thu - Sun : 9 am - 5pm</p>
+                                <p class="yellowJ abrilFatfaceJ footerFontSize2">CONTACT US</p>
+                                <p class="yellowJ footerFontSize">Mon & Tue : 9 am - 5 pm</p>
+                                <p class="yellowJ footerFontSize">CLOSED WEDNESDAY</p>
+                                <p class="yellowJ footerFontSize">Thu - Sun : 9 am - 5pm</p>
                             </div>
                         </div>
 
                         <div class="col">
                             <div class="row">
-                                <p class="yellowJ">Links</p>
+                                <p class="yellowJ abrilFatfaceJ footerFontSize2">LINKS</p>
                             </div>
                             <div class="row">
-                                <img src="" alt="">
-                                <img src="" alt="">
-                                <img src="" alt="">
+                                <a class="footerIconsJ"
+                                    href="https://m.facebook.com/profile.php?id=111693338885516"><img class="img-fluid"
+                                        src="../assets/FACEBOOK.png" alt=""></a>
+                                <a class="footerIconsJ"
+                                    href="https://m.facebook.com/profile.php?id=111693338885516"><img class="img-fluid"
+                                        src="../assets/icons8-yelp-100.png" alt=""></a>
+                                <a class="footerIconsJ"><img class="img-fluid" src="../assets/bestSandwich logo.png"
+                                        alt=""></a>
                             </div>
                         </div>
                     </div>
@@ -328,41 +390,6 @@
 
 
     </div>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
 
 
