--- a/index.html
+++ b/index.html
@@ -154,8 +154,7 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/banhMiCard1.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span class="sandwichJ">Grilled Pork</span> $5.79</p>
                     </div>
                 </div>
             </div>
@@ -163,8 +162,7 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/banhMiCard2.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Diet Friendly <span class="sandwichJ">Vegetarian</span> $5.79</p>
                     </div>
                 </div>
             </div>
@@ -172,8 +170,7 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/BanhMiCard3.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span class="sandwichJ">Grilled Pork</span> $5.79</p>
                     </div>
                 </div>
             </div>
@@ -181,8 +178,7 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/banhMiCard4.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span class="sandwichJ">Grilled Pork</span> $5.79</p>
                     </div>
                 </div>
             </div>
@@ -190,8 +186,7 @@
                 <div class="card cardJ" style="width: 280px;">
                     <img src="./assets/banhMiCard5.png" class="card-img-top" alt="...">
                     <div class="card-body">
-                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                            the card's content.</p>
+                        <p class="card-text sansCollectionJ sandwichJ2 sandwichTxtJ">#1 Favorite <span class="sandwichJ">Grilled Pork</span> $5.79</p>
                     </div>
                 </div>
             </div>
@@ -248,7 +243,7 @@
             </div>
             <div class="col">
                 <div class="card cardJ" style="width: 280px;">
-                    <img src="./assets/drinkCard4.png" class="card-img-top" alt="...">
+                    <img src="./assets/drinkCard4.png" class="card-img-top" alt="..." style="object-position: 0px 20px;">
                     <div class="card-body">
                         <p class="card-text">Some quick example text to build on the card title and make up the bulk of
                             the card's content.</p>
